--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						<div >	
 							<div class="containerbox ">
 								<img class="containerimg" src="images/webdesign1.jpg">
-								<h2>WEB DESIGN</h2>
+								<h2 class="conainerbotext">WEB DESIGN</h2>
 								<p class="padd">
 									 Excepteur sint occaecat cupidatat non
 									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -202,7 +202,7 @@
 						
 							<div class="containerbox">
 								<img class="containerimg" src="images/photography1.jpg">
-								<h2>PHOTOGRAPHY</h2>
+								<h2 class="conainerbotext" >PHOTOGRAPHY</h2>
 								<p class="padd">
 									 Excepteur sint occaecat cupidatat non
 									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -212,7 +212,7 @@
 							</div>
 							<div class="containerbox">
 								<img class="containerimg" src="images/programming2.jpg">
-								<h2>PROGRAMMING</h2>
+								<h2 class="conainerbotext">PROGRAMMING</h2>
 								<p class="padd">
 									 Excepteur sint occaecat cupidatat non
 									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -224,7 +224,7 @@
 						<div class="box2">
 							<div  class="containerbox">
 								<img class="containerimg" src="images/webdesign2.jpg">
-								<h2>WEB DESIGN</h2>
+								<h2 class="conainerbotext">WEB DESIGN</h2>
 								<p class="padd">
 									 Excepteur sint occaecat cupidatat non
 									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -235,7 +235,7 @@
 						
 							<div class="containerbox">
 								<img class="containerimg" src="images/photography2.jpg">
-								<h2>PHOTOGRAPHY</h2>
+								<h2 class="conainerbotext">PHOTOGRAPHY</h2>
 								<p class="padd">
 									 Excepteur sint occaecat cupidatat non
 									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -245,7 +245,7 @@
 							</div>
 							<div class="containerbox">
 								<img class="containerimg" src="images/programming1.jpg">
-								<h2>PROGRAMMING</h2>
+								<h2 class="conainerbotext">PROGRAMMING</h2>
 								<p class="padd">
 									 Excepteur sint occaecat cupidatat non
 									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
